--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SnW Restaurant - Delicious Food, Memorable Experiences</title>
+    <title>Swarajya Kitchen - Pure Veg Maharashtra Heritage Menu</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <h1>SnW Restaurant</h1>
+                <h1>Swarajya Kitchen</h1>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
@@ -26,115 +26,36 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h2>Welcome to SnW Restaurant</h2>
-            <p>Experience the finest dining with exquisite cuisine and exceptional service</p>
-            <a href="#menu" class="btn">View Our Menu</a>
+            <h2>Welcome to Swarajya Kitchen</h2>
+            <p>Experience authentic pure vegetarian Maharashtra heritage cuisine with traditional flavors</p>
+            <a href="#menu" class="btn">View Our Heritage Menu</a>
         </div>
     </section>
 
     <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
-            <h2 class="section-title">About Us</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <h3>Our Story</h3>
-                    <p>SnW Restaurant has been serving delicious, authentic cuisine since 2010. Our passion for food and commitment to quality has made us a favorite dining destination.</p>
-                    <p>We use only the freshest ingredients, sourced locally whenever possible, to create memorable dishes that delight our guests.</p>
-                    <p>Our experienced chefs combine traditional recipes with modern techniques to bring you an unforgettable culinary experience.</p>
-                </div>
-                <div class="about-image">
-                    <div class="placeholder-image">Restaurant Interior</div>
-                </div>
-            </div>
+            <h2>About Swarajya Kitchen</h2>
+            <p>Celebrating the rich culinary heritage of Maharashtra with pure vegetarian traditional recipes passed down through generations.</p>
         </div>
     </section>
 
     <!-- Menu Section -->
     <section id="menu" class="menu">
         <div class="container">
-            <h2 class="section-title">Our Menu</h2>
-            <div class="menu-categories">
-                <div class="menu-category">
-                    <h3>Appetizers</h3>
-                    <div class="menu-item">
-                        <div class="item-header">
-                            <h4>Bruschetta</h4>
-                            <span class="price">$8.99</span>
-                        </div>
-                        <p>Toasted bread topped with fresh tomatoes, basil, and garlic</p>
-                    </div>
-                    <div class="menu-item">
-                        <div class="item-header">
-                            <h4>Calamari</h4>
-                            <span class="price">$12.99</span>
-                        </div>
-                        <p>Crispy fried squid served with marinara sauce</p>
-                    </div>
-                    <div class="menu-item">
-                        <div class="item-header">
-                            <h4>Spinach Artichoke Dip</h4>
-                            <span class="price">$10.99</span>
-                        </div>
-                        <p>Creamy dip served with warm tortilla chips</p>
-                    </div>
+            <h2>Our Heritage Menu</h2>
+            <div class="menu-items">
+                <div class="menu-item">
+                    <h3>Traditional Thali</h3>
+                    <p>Complete Maharashtra-style meal with bhakri, dal, sabzi, and traditional accompaniments</p>
                 </div>
-
-                <div class="menu-category">
-                    <h3>Main Courses</h3>
-                    <div class="menu-item">
-                        <div class="item-header">
-                            <h4>Grilled Salmon</h4>
-                            <span class="price">$24.99</span>
-                        </div>
-                        <p>Fresh Atlantic salmon with lemon butter sauce and vegetables</p>
-                    </div>
-                    <div class="menu-item">
-                        <div class="item-header">
-                            <h4>Ribeye Steak</h4>
-                            <span class="price">$32.99</span>
-                        </div>
-                        <p>12oz premium ribeye with garlic mashed potatoes</p>
-                    </div>
-                    <div class="menu-item">
-                        <div class="item-header">
-                            <h4>Chicken Parmesan</h4>
-                            <span class="price">$18.99</span>
-                        </div>
-                        <p>Breaded chicken breast with marinara and melted cheese</p>
-                    </div>
-                    <div class="menu-item">
-                        <div class="item-header">
-                            <h4>Vegetable Pasta</h4>
-                            <span class="price">$16.99</span>
-                        </div>
-                        <p>Fresh pasta with seasonal vegetables in olive oil and garlic</p>
-                    </div>
+                <div class="menu-item">
+                    <h3>Puran Poli</h3>
+                    <p>Sweet flatbread filled with jaggery and lentil mixture, a Maharashtra specialty</p>
                 </div>
-
-                <div class="menu-category">
-                    <h3>Desserts</h3>
-                    <div class="menu-item">
-                        <div class="item-header">
-                            <h4>Tiramisu</h4>
-                            <span class="price">$7.99</span>
-                        </div>
-                        <p>Classic Italian dessert with coffee and mascarpone</p>
-                    </div>
-                    <div class="menu-item">
-                        <div class="item-header">
-                            <h4>Chocolate Lava Cake</h4>
-                            <span class="price">$8.99</span>
-                        </div>
-                        <p>Warm chocolate cake with molten center and vanilla ice cream</p>
-                    </div>
-                    <div class="menu-item">
-                        <div class="item-header">
-                            <h4>Cheesecake</h4>
-                            <span class="price">$6.99</span>
-                        </div>
-                        <p>New York style cheesecake with berry compote</p>
-                    </div>
+                <div class="menu-item">
+                    <h3>Misal Pav</h3>
+                    <p>Spicy sprout curry served with bread rolls, authentic Maharashtrian street food</p>
                 </div>
             </div>
         </div>
@@ -143,100 +64,17 @@
     <!-- Gallery Section -->
     <section id="gallery" class="gallery">
         <div class="container">
-            <h2 class="section-title">Gallery</h2>
-            <div class="gallery-grid">
-                <div class="gallery-item">
-                    <div class="placeholder-image">Dish 1</div>
-                </div>
-                <div class="gallery-item">
-                    <div class="placeholder-image">Dish 2</div>
-                </div>
-                <div class="gallery-item">
-                    <div class="placeholder-image">Dish 3</div>
-                </div>
-                <div class="gallery-item">
-                    <div class="placeholder-image">Dish 4</div>
-                </div>
-                <div class="gallery-item">
-                    <div class="placeholder-image">Dish 5</div>
-                </div>
-                <div class="gallery-item">
-                    <div class="placeholder-image">Dish 6</div>
-                </div>
-            </div>
+            <h2>Gallery</h2>
+            <p>Discover our traditional cooking methods and authentic Maharashtra dishes</p>
         </div>
     </section>
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2 class="section-title">Contact Us</h2>
-            <div class="contact-content">
-                <div class="contact-info">
-                    <div class="info-item">
-                        <h3>Address</h3>
-                        <p>123 Food Street</p>
-                        <p>Culinary City, CC 12345</p>
-                    </div>
-                    <div class="info-item">
-                        <h3>Phone</h3>
-                        <p>(555) 123-4567</p>
-                    </div>
-                    <div class="info-item">
-                        <h3>Email</h3>
-                        <p>info@snwrestaurant.com</p>
-                    </div>
-                    <div class="info-item">
-                        <h3>Hours</h3>
-                        <p>Monday - Friday: 11:00 AM - 10:00 PM</p>
-                        <p>Saturday - Sunday: 10:00 AM - 11:00 PM</p>
-                    </div>
-                </div>
-                <div class="contact-form">
-                    <h3>Send us a Message</h3>
-                    <form>
-                        <div class="form-group">
-                            <input type="text" placeholder="Your Name" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="email" placeholder="Your Email" required>
-                        </div>
-                        <div class="form-group">
-                            <textarea placeholder="Your Message" rows="5" required></textarea>
-                        </div>
-                        <button type="submit" class="btn">Send Message</button>
-                    </form>
-                </div>
-            </div>
+            <h2>Contact Us</h2>
+            <p>Visit us to experience the authentic taste of Maharashtra</p>
         </div>
     </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>SnW Restaurant</h3>
-                    <p>Delicious food, memorable experiences</p>
-                </div>
-                <div class="footer-section">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#menu">Menu</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Follow Us</h3>
-                    <p>Stay connected on social media</p>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 SnW Restaurant. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
 </body>
 </html>
