--- a/index.html
+++ b/index.html
@@ -1,80 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swarajya Kitchen - Pure Veg Maharashtra Heritage Menu</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- Navigation Bar -->
-    <nav class="navbar">
-        <div class="container">
-            <div class="logo">
-                <h1>Swarajya Kitchen</h1>
-            </div>
-            <ul class="nav-menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#menu">Menu</a></li>
-                <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <!-- Hero Section -->
-    <section id="home" class="hero">
-        <div class="hero-content">
-            <h2>Welcome to Swarajya Kitchen</h2>
-            <p>Experience authentic pure vegetarian Maharashtra heritage cuisine with traditional flavors</p>
-            <a href="#menu" class="btn">View Our Heritage Menu</a>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section id="about" class="about">
-        <div class="container">
-            <h2>About Swarajya Kitchen</h2>
-            <p>Celebrating the rich culinary heritage of Maharashtra with pure vegetarian traditional recipes passed down through generations.</p>
-        </div>
-    </section>
-
-    <!-- Menu Section -->
-    <section id="menu" class="menu">
-        <div class="container">
-            <h2>Our Heritage Menu</h2>
-            <div class="menu-items">
-                <div class="menu-item">
-                    <h3>Traditional Thali</h3>
-                    <p>Complete Maharashtra-style meal with bhakri, dal, sabzi, and traditional accompaniments</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Puran Poli</h3>
-                    <p>Sweet flatbread filled with jaggery and lentil mixture, a Maharashtra specialty</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Misal Pav</h3>
-                    <p>Spicy sprout curry served with bread rolls, authentic Maharashtrian street food</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Gallery Section -->
-    <section id="gallery" class="gallery">
-        <div class="container">
-            <h2>Gallery</h2>
-            <p>Discover our traditional cooking methods and authentic Maharashtra dishes</p>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="contact">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <p>Visit us to experience the authentic taste of Maharashtra</p>
-        </div>
-    </section>
-</body>
-</html>
+code_file:8
