--- a/index.html
+++ b/index.html
@@ -1,1 +1,195 @@
-code_file:8
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Swarajya Kitchen - Authentic Indian Restaurant</title>
+  <meta name="description" content="Swarajya Kitchen - Authentic flavors of India. Full menu of appetizers, mains, breads, desserts, and beverages. Dine-in, takeaway, and catering." />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <style>
+    :root{
+      --primary:#b22222; /* firebrick */
+      --accent:#f4a261;
+      --bg:#fffaf6;
+      --text:#222;
+      --muted:#666;
+      --card:#ffffff;
+      --success:#1b5e20;
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;font-family:Poppins,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Helvetica,Arial,sans-serif;color:var(--text);background:var(--bg)}
+    a{color:var(--primary);text-decoration:none}
+    img{max-width:100%;display:block}
+    /* Nav */
+    .nav{position:sticky;top:0;z-index:50;background:#fff;border-bottom:1px solid #eee}
+    .nav .wrap{max-width:1200px;margin:0 auto;display:flex;align-items:center;justify-content:space-between;padding:12px 16px;gap:16px}
+    .brand{display:flex;align-items:center;gap:10px;font-weight:700;color:var(--primary)}
+    .brand .logo{width:34px;height:34px;border-radius:50%;background:var(--primary);display:grid;place-items:center;color:#fff;font-weight:800}
+    .nav a.link{color:#333;padding:8px 10px;border-radius:6px}
+    .nav a.link:hover{background:#f7f7f7}
+    .btn{background:var(--primary);color:#fff;border:0;padding:10px 16px;border-radius:8px;cursor:pointer;font-weight:600}
+    .btn.secondary{background:var(--accent);color:#5b2d0d}
+    .btn.ghost{background:transparent;color:var(--primary);border:2px solid var(--primary)}
+    /* Hero */
+    .hero{display:grid;place-items:center;padding:56px 16px 32px;background:linear-gradient(180deg,#fff, #fff5f0)}
+    .hero .inner{max-width:1100px;width:100%;display:grid;grid-template-columns:1.1fr 0.9fr;gap:28px;align-items:center}
+    .hero h1{font-size:clamp(28px,4vw,48px);margin:0 0 10px;color:#111}
+    .hero p{color:var(--muted);margin:0 0 18px}
+    .hero .cta{display:flex;gap:12px;flex-wrap:wrap}
+    .tag{display:inline-flex;gap:8px;align-items:center;background:#fff;border:1px solid #eee;border-radius:999px;padding:6px 12px;color:#333;font-size:14px}
+    .hero img{border-radius:14px;box-shadow:0 20px 60px rgba(178,34,34,.25)}
+    /* Sections */
+    section{padding:56px 16px}
+    .container{max-width:1200px;margin:0 auto}
+    h2.section-title{font-size:28px;margin:0 0 8px}
+    p.section-sub{margin:0 0 24px;color:var(--muted)}
+    /* About */
+    .about{display:grid;grid-template-columns:1fr 1fr;gap:28px;align-items:center}
+    .card{background:var(--card);border:1px solid #eee;border-radius:14px;padding:18px}
+    /* Menu */
+    .menu-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
+    .menu-cat{background:#fff;border:1px solid #eee;border-radius:14px;overflow:hidden}
+    .menu-cat header{display:flex;align-items:center;justify-content:space-between;padding:14px 16px;background:#fff5f0;border-bottom:1px solid #f2e6e3}
+    .menu-items{display:grid;gap:0}
+    .item{display:grid;grid-template-columns:auto 1fr auto;gap:12px;align-items:center;padding:12px 14px;border-bottom:1px dashed #eee}
+    .item:last-child{border-bottom:0}
+    .item .dot{width:8px;height:8px;border-radius:50%;background:var(--primary)}
+    .item h4{margin:0;font-size:15px}
+    .item p{margin:2px 0 0;color:#666;font-size:13px}
+    .price{font-weight:600;color:#111}
+    .veg{color:#1b5e20;font-weight:600}
+    .nonveg{color:#7b1fa2;font-weight:600}
+    /* Gallery */
+    .gallery{display:grid;grid-template-columns:repeat(4,1fr);gap:12px}
+    .gallery img{height:180px;object-fit:cover;border-radius:12px}
+    /* Contact */
+    .contact-grid{display:grid;grid-template-columns:1.2fr .8fr;gap:24px}
+    form .row{display:grid;grid-template-columns:1fr 1fr;gap:12px}
+    input,textarea{width:100%;padding:12px 14px;border-radius:10px;border:1px solid #ddd;font:inherit}
+    textarea{min-height:120px}
+    .footer{background:#0f0f0f;color:#ddd;padding:28px 16px}
+    .footer a{color:#fff}
+    /* Responsive */
+    @media (max-width: 980px){
+      .hero .inner{grid-template-columns:1fr}
+      .about{grid-template-columns:1fr}
+      .menu-grid{grid-template-columns:1fr 1fr}
+      .gallery{grid-template-columns:1fr 1fr}
+      .contact-grid{grid-template-columns:1fr}
+    }
+    @media (max-width: 640px){
+      .menu-grid{grid-template-columns:1fr}
+      .gallery{grid-template-columns:1fr}
+    }
+  </style>
+</head>
+<body>
+  <!-- Nav -->
+  <nav class="nav" aria-label="Primary">
+    <div class="wrap">
+      <a class="brand" href="#home"><span class="logo">SK</span> Swarajya Kitchen</a>
+      <div class="links">
+        <a class="link" href="#home">Home</a>
+        <a class="link" href="#about">About</a>
+        <a class="link" href="#menu">Menu</a>
+        <a class="link" href="#gallery">Gallery</a>
+        <a class="link" href="#contact">Contact</a>
+        <a class="btn ghost" href="#reserve">Reserve</a>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Hero -->
+  <header id="home" class="hero">
+    <div class="inner">
+      <div>
+        <span class="tag">Authentic • Maharashtrian & Pan‑Indian</span>
+        <h1>Experience the Royal Flavors of Swarajya</h1>
+        <p>From hearty misal and melt‑in‑mouth kebabs to fragrant biryanis and fresh tandoor breads—crafted with seasonal ingredients and time‑honored techniques.</p>
+        <div class="cta">
+          <a class="btn" href="#menu">Explore Full Menu</a>
+          <a class="btn secondary" href="#contact">Order / Catering</a>
+        </div>
+      </div>
+      <img src="https://images.unsplash.com/photo-1604908176997-43162f7e4d49?q=80&w=1400&auto=format&fit=crop" alt="Indian thali spread" />
+    </div>
+  </header>
+
+  <!-- About -->
+  <section id="about">
+    <div class="container about">
+      <div class="card">
+        <h2 class="section-title">Our Story</h2>
+        <p class="section-sub">Inspired by the valor of Swarajya, our kitchen celebrates bold flavors and warm hospitality.</p>
+        <p>We mill our spices in‑house, slow‑cook gravies to perfection, and bake breads in a traditional tandoor. Whether you choose a quick lunch or a regal feast, our food is made fresh to order.</p>
+      </div>
+      <div class="card">
+        <h2 class="section-title">Hours & Location</h2>
+        <p>Mon–Thu: 11:30 AM – 10:00 PM<br>Fri–Sun: 11:00 AM – 11:00 PM</p>
+        <p>Shaniwar Peth, Pune • +91 98765 43210</p>
+        <p><strong>Dine‑in</strong>, <strong>Takeaway</strong> and <strong>Catering</strong> available</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Menu -->
+  <section id="menu">
+    <div class="container">
+      <h2 class="section-title">Complete Menu</h2>
+      <p class="section-sub">Over 50 dishes across appetizers, mains, breads, desserts, and beverages.</p>
+
+      <div class="menu-grid">
+        <!-- Appetizers -->
+        <div class="menu-cat">
+          <header>
+            <h3>Appetizers</h3>
+            <span class="veg">Veg & Non‑Veg</span>
+          </header>
+          <div class="menu-items">
+            <div class="item"><span class="dot"></span><div><h4>Paneer Tikka</h4><p>Smoky cottage cheese, bell peppers, onions</p></div><div class="price">₹260</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Hara Bhara Kebab</h4><p>Spinach, peas, herbs, hung curd</p></div><div class="price">₹220</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Veg Seekh Kebab</h4><p>Mixed veg mince, garam masala</p></div><div class="price">₹230</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Aloo Tikki Chaat</h4><p>Tamarind, mint, yogurt, sev</p></div><div class="price">₹180</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Dahi Puri</h4><p>Stuffed puris with spiced yogurt</p></div><div class="price">₹160</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Paani Puri</h4><p>Tangy mint water, potatoes, chickpeas</p></div><div class="price">₹140</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Onion Pakoda</h4><p>Crispy gram‑flour fritters</p></div><div class="price">₹150</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Chicken Tikka</h4><p>Classic tandoori with kasuri methi</p></div><div class="price">₹320</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Tandoori Chicken (Half)</h4><p>House spice rub, charred lemon</p></div><div class="price">₹340</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Malai Chicken Tikka</h4><p>Yogurt, cream, white pepper</p></div><div class="price">₹340</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Fish Koliwada</h4><p>Red masala crispy fry</p></div><div class="price">₹380</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Prawns Koliwada</h4><p>Amritsari style, ajwain hint</p></div><div class="price">₹430</div></div>
+          </div>
+        </div>
+
+        <!-- Maharashtrian Specials -->
+        <div class="menu-cat">
+          <header>
+            <h3>Maharashtrian Specials</h3>
+            <span class="veg">Regional</span>
+          </header>
+          <div class="menu-items">
+            <div class="item"><span class="dot"></span><div><h4>Misal Pav</h4><p>Sprouts usal, farsan, kat rassa</p></div><div class="price">₹160</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Pav Bhaji</h4><p>Buttery, with extra pav</p></div><div class="price">₹170</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Vada Pav</h4><p>Gunpowder chutney, green chili</p></div><div class="price">₹60</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Poha</h4><p>Kanda‑batata, peanuts, lemon</p></div><div class="price">₹110</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Sabudana Khichdi</h4><p>Fasting special, ghee roasted</p></div><div class="price">₹180</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Pithla Bhakri</h4><p>Gram‑flour curry, jowar bhakri, thecha</p></div><div class="price">₹220</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Chicken Rassa</h4><p>Kolhapuri spice, coconut</p></div><div class="price">₹320</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Mutton Rassa</h4><p>Homestyle, medium heat</p></div><div class="price">₹420</div></div>
+          </div>
+        </div>
+
+        <!-- Vegetarian Mains -->
+        <div class="menu-cat">
+          <header>
+            <h3>Vegetarian Mains</h3>
+            <span class="veg">Veg</span>
+          </header>
+          <div class="menu-items">
+            <div class="item"><span class="dot"></span><div><h4>Paneer Butter Masala</h4><p>Silky tomato‑cashew makhani</p></div><div class="price">₹280</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Kadai Paneer</h4><p>Crushed spices, capsicum, onion</p></div><div class="price">₹270</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Palak Paneer</h4><p>Creamed spinach, garlic tadka</p></div><div class="price">₹270</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Paneer Tikka Masala</h4><p>Tandoor‑roasted paneer in gravy</p></div><div class="price">₹290</div></div>
+            <div class="item"><span class="dot"></span><div><h4>Veg Kolhapuri</h4><p>Spicy coconut‑based curry</p></div><div class="price
