Add index.html with new images across all site sections
Placed new images across all sections of the restaurant website, ensuring updated visual content throughout. Improved gallery, menu, and banner visuals for a refreshed and cohesive look.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <p>Experience the authentic flavors of India in an atmosphere of warmth, elegance, and tradition.</p>
             </div>
             <div class="about-image">
-                <img src="./Satvik Bhoj - Pure Vegetarian Fine Dining_files/photo-1555939594-58d7cb561ad1" alt="Restaurant Interior" />
+                <img src="images/resto.png" alt="Restaurant Interior" />
             </div>
         </div>
 
@@ -92,7 +92,7 @@
         <div class="menu-grid">
             <div class="menu-item">
                 <div class="menu-item-image">
-                    <img src="./Satvik Bhoj - Pure Vegetarian Fine Dining_files/photo-1601050690597-df0568f70950" alt="Paneer Tikka" />
+                    <img src="images/menu1.png" alt="Paneer Tikka" />
                     <span class="veg-badge">Pure Veg</span>
                 </div>
                 <div class="menu-item-content">
@@ -106,7 +106,7 @@
 
             <div class="menu-item">
                 <div class="menu-item-image">
-                    <img src="./Satvik Bhoj - Pure Vegetarian Fine Dining_files/photo-1626074353765-517a681e40be" alt="Dal Makhani" />
+                    <img src="images/menu2.png" alt="Dal Makhani" />
                     <span class="veg-badge">Pure Veg</span>
                 </div>
                 <div class="menu-item-content">
@@ -120,7 +120,7 @@
 
             <div class="menu-item">
                 <div class="menu-item-image">
-                    <img src="./Satvik Bhoj - Pure Vegetarian Fine Dining_files/photo-1567188040759-fb8a883dc6d8" alt="Malai Kofta" />
+                    <img src="images/menu3.png" alt="Malai Kofta" />
                     <span class="veg-badge">Pure Veg</span>
                 </div>
                 <div class="menu-item-content">
@@ -134,7 +134,7 @@
 
             <div class="menu-item">
                 <div class="menu-item-image">
-                    <img src="./Satvik Bhoj - Pure Vegetarian Fine Dining_files/photo-1599487488170-d11ec9c172f0" alt="Palak Paneer" />
+                    <img src="images/menu4.jpeg" alt="Palak Paneer" />
                     <span class="veg-badge">Pure Veg</span>
                 </div>
                 <div class="menu-item-content">
@@ -148,7 +148,7 @@
 
             <div class="menu-item">
                 <div class="menu-item-image">
-                    <img src="./Satvik Bhoj - Pure Vegetarian Fine Dining_files/photo-1589301773859-747a80964e6c" alt="Biryani" />
+                    <img src="images/menu5..jpeg" alt="Biryani" />
                     <span class="veg-badge">Pure Veg</span>
                 </div>
                 <div class="menu-item-content">
@@ -162,7 +162,7 @@
 
             <div class="menu-item">
                 <div class="menu-item-image">
-                    <img src="./Satvik Bhoj - Pure Vegetarian Fine Dining_files/photo-1565557623262-b51c2513a641" alt="Gulab Jamun" />
+                    <img src="images/menu6.jpeg" alt="Gulab Jamun" />
                     <span class="veg-badge">Pure Veg</span>
                 </div>
                 <div class="menu-item-content">
@@ -212,42 +212,42 @@
 
         <div class="gallery-grid">
             <div class="gallery-item">
-                <img src="./Satvik Bhoj - Pure Vegetarian Fine Dining_files/photo-1517248135467-4c7edcad34c4" alt="Restaurant Ambiance" />
+                <img src="images/gallery1..png" alt="Restaurant Ambiance" />
                 <div class="gallery-overlay">
                     <h4>Elegant Dining</h4>
                     <p>Experience luxury in traditional settings</p>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="./Satvik Bhoj - Pure Vegetarian Fine Dining_files/photo-1606787366850-de6330128bfc" alt="Plated Dish" />
+                <img src="images/gallery2.jpeg" alt="Plated Dish" />
                 <div class="gallery-overlay">
                     <h4>Artful Presentation</h4>
                     <p>Every dish is a masterpiece</p>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="./Satvik Bhoj - Pure Vegetarian Fine Dining_files/photo-1414235077428-338989a2e8c0" alt="Dining Table" />
+                <img src="images/gallery3.png" alt="Dining Table" />
                 <div class="gallery-overlay">
                     <h4>Perfect Setting</h4>
                     <p>Ideal for family gatherings</p>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="./Satvik Bhoj - Pure Vegetarian Fine Dining_files/photo-1504674900247-0877df9cc836" alt="Food Preparation" />
+                <img src="images/gallery4.png" alt="Food Preparation" />
                 <div class="gallery-overlay">
                     <h4>Fresh Ingredients</h4>
                     <p>Quality you can taste</p>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="./Satvik Bhoj - Pure Vegetarian Fine Dining_files/photo-1555939594-58d7cb561ad1(1)" alt="Restaurant Interior" />
+                <img src="images/gallery5.jpg" alt="Restaurant Interior" />
                 <div class="gallery-overlay">
                     <h4>Warm Ambiance</h4>
                     <p>Traditional meets modern</p>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="./Satvik Bhoj - Pure Vegetarian Fine Dining_files/photo-1512621776951-a57141f2eefd" alt="Vegetable Spread" />
+                <img src="images/gallery6.png" alt="Vegetable Spread" />
                 <div class="gallery-overlay">
                     <h4>Organic Produce</h4>
                     <p>Farm to table freshness</p>
@@ -454,6 +454,12 @@
 
         <div class="footer-bottom">
             <p>© 2025 Satvik Bhoj. All rights reserved. | Crafted with love for pure vegetarian cuisine</p>
+        </div>
+    </footer>
+</body>
+</html>
+
+
         </div>
     </footer>
 </body>
