--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <p>Experience the authentic flavors of India in an atmosphere of warmth, elegance, and tradition.</p>
             </div>
             <div class="about-image">
-                <img src="images/resto.png" alt="Restaurant Interior" />
+                <img src="images/images/resto.png" alt="Restaurant Interior" />
             </div>
         </div>
 
@@ -92,7 +92,7 @@
         <div class="menu-grid">
             <div class="menu-item">
                 <div class="menu-item-image">
-                    <img src="images/menu1.png" alt="Paneer Tikka" />
+                    <img src="images/images/menu1.png" alt="Paneer Tikka" />
                     <span class="veg-badge">Pure Veg</span>
                 </div>
                 <div class="menu-item-content">
@@ -106,7 +106,7 @@
 
             <div class="menu-item">
                 <div class="menu-item-image">
-                    <img src="images/menu2.png" alt="Dal Makhani" />
+                    <img src="images/images/menu2.png" alt="Dal Makhani" />
                     <span class="veg-badge">Pure Veg</span>
                 </div>
                 <div class="menu-item-content">
@@ -120,7 +120,7 @@
 
             <div class="menu-item">
                 <div class="menu-item-image">
-                    <img src="images/menu3.png" alt="Malai Kofta" />
+                    <img src="images/images/menu3.png" alt="Malai Kofta" />
                     <span class="veg-badge">Pure Veg</span>
                 </div>
                 <div class="menu-item-content">
@@ -134,7 +134,7 @@
 
             <div class="menu-item">
                 <div class="menu-item-image">
-                    <img src="images/menu4.jpeg" alt="Palak Paneer" />
+                    <img src="images/images/menu4.jpeg" alt="Palak Paneer" />
                     <span class="veg-badge">Pure Veg</span>
                 </div>
                 <div class="menu-item-content">
@@ -148,7 +148,7 @@
 
             <div class="menu-item">
                 <div class="menu-item-image">
-                    <img src="images/menu5..jpeg" alt="Biryani" />
+                    <img src="images/images/menu5..jpeg" alt="Biryani" />
                     <span class="veg-badge">Pure Veg</span>
                 </div>
                 <div class="menu-item-content">
@@ -162,7 +162,7 @@
 
             <div class="menu-item">
                 <div class="menu-item-image">
-                    <img src="images/menu6.jpeg" alt="Gulab Jamun" />
+                    <img src="images/images/menu6.jpeg" alt="Gulab Jamun" />
                     <span class="veg-badge">Pure Veg</span>
                 </div>
                 <div class="menu-item-content">
@@ -212,42 +212,42 @@
 
         <div class="gallery-grid">
             <div class="gallery-item">
-                <img src="images/gallery1..png" alt="Restaurant Ambiance" />
+                <img src="images/images/gallery1..png" alt="Restaurant Ambiance" />
                 <div class="gallery-overlay">
                     <h4>Elegant Dining</h4>
                     <p>Experience luxury in traditional settings</p>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="images/gallery2.jpeg" alt="Plated Dish" />
+                <img src="images/images/gallery2.jpeg" alt="Plated Dish" />
                 <div class="gallery-overlay">
                     <h4>Artful Presentation</h4>
                     <p>Every dish is a masterpiece</p>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="images/gallery3.png" alt="Dining Table" />
+                <img src="images/images/gallery3.png" alt="Dining Table" />
                 <div class="gallery-overlay">
                     <h4>Perfect Setting</h4>
                     <p>Ideal for family gatherings</p>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="images/gallery4.png" alt="Food Preparation" />
+                <img src="images/images/gallery4.png" alt="Food Preparation" />
                 <div class="gallery-overlay">
                     <h4>Fresh Ingredients</h4>
                     <p>Quality you can taste</p>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="images/gallery5.jpg" alt="Restaurant Interior" />
+                <img src="images/images/gallery5.jpg" alt="Restaurant Interior" />
                 <div class="gallery-overlay">
                     <h4>Warm Ambiance</h4>
                     <p>Traditional meets modern</p>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="images/gallery6.png" alt="Vegetable Spread" />
+                <img src="images/images/gallery6.png" alt="Vegetable Spread" />
                 <div class="gallery-overlay">
                     <h4>Organic Produce</h4>
                     <p>Farm to table freshness</p>
